--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -489,3 +489,43 @@ body {
     }
   }
 }
+
+/* YouTube Video Player Styles */
+.video-player-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.video-player-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+  border: none;
+}
+
+.youtube-player {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+/* Responsive YouTube embed */
+.youtube-responsive {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+}
+
+.youtube-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
